Show file asset on the export form if it's an image.

--- a/assets/css/lark.admin.css
+++ b/assets/css/lark.admin.css
@@ -21,6 +21,12 @@
   border-color: darkred;
 }
 
+img.lark-asset-thumbnail-image {
+  max-width: 300px;
+  max-height: auto;
+  height: auto;
+}
+
 table.lark-diff-table td {
   height: unset;
   font-family: monospace;
