--- a/assets/css/lark.admin.css
+++ b/assets/css/lark.admin.css
@@ -21,6 +21,12 @@
   border-color: darkred;
 }
 
+.lark-asset-details-container {
+  margin: 1em;
+  padding: 1em;
+  border-top: 1px solid #bbb;
+}
+
 img.lark-asset-thumbnail-image {
   max-width: 300px;
   max-height: auto;
