First pass at prune as export operation

--- a/assets/css/lark.admin.css
+++ b/assets/css/lark.admin.css
@@ -1,3 +1,12 @@
+@media (min-width: 768px) {
+  .lark-flex-break {
+    display: flex;
+  }
+  .lark-flex-break > table {
+    margin-right: 2em;
+  }
+}
+
 .lark-exports-table th.status,
 .lark-exports-table td.status {
   max-width: 80px;
